[package]
description = "ADNL library"
edition = "2021"
name = "adnl"
rust-version = "1.75.0"
version = "0.10.0"

[dependencies]
aes-ctr = "0.6.0"
anyhow = "1.0.79"
async-trait = "0.1.77"
chrono = { optional = true, version = "0.4.33" }
enum-as-inner = "0.6.0"
external-ip = "4.2.0"
futures = "0.3.30"
lockfree = { git = "https://github.com/tvmlabs/lockfree" }
log = "0.4.20"
num_cpus = "1.16.0"
rand = "0.8.5"
serde = { features = ["derive", "rc"], version = "1.0.196" }
serde_json = "1.0.113"
socket2 = "0.5.5"
stream-cancel = "0.8.2"
tokio = { features = ["io-util", "macros", "net", "rt-multi-thread"], version = "1.35.1" }
tokio-io-timeout = "1.2.0"
tokio-stream = { features = ["net"], version = "0.1.14" }
tvm_api = { git = "https://github.com/tvmlabs/tvm-tl", package = "tvm_api", tag = "0.4.0" }
tvm_types = { git = "https://github.com/tvmlabs/tvm-types", tag = "3.0.1" }
zstd = { features = ["pkg-config"], version = "0.13.0" }

[features]
client = []
debug = []
default = ["static_workers"]
dump = ["chrono"]
node = []
server = []
static_workers = []
telemetry = []
external-ip = []
